@@ -1,4 +1,5 @@
 --- v2.2 (2017-xx-xx) ---
+* Add new packages: qtmultimedia
 * Update in all configs:
   - FFMPEG_VER from 3.2.1 to 3.2.4
   - PROTOBUF_VER from 3.1.0 to 3.2.0
